--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,20 @@
-<img src="img/terrifiednootnoot.jpg">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Index</title>
+</head>
+<body>
+  <h1>Index</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus eros aliquet convallis ultricies.</p>
+  <p>Morbi tempor, massa ut sollicitudin tincidunt, sapien justo tristique neque, eget tincidunt velit nunc ut ante.</p>
+  <p>Curabitur a lectus vitae justo malesuada dignissim sit amet a elit.</p>
+
+  <img src="img/rock.webp" width="400" height="250" alt="Image de remplacement">
+</br>
+    <button onclick="window.location.href='/cookie/cookie.html'">
+    Aller au Cookie Clicker
+  </button>
+</body>
+</html>
